# semester-work-segment-tree-004

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  demo_benchmark.cpp  linear_getMin_benchmark.cpp  linear_getSum_benchmark.cpp  segment_tree_getMin_average_benchmark.cpp  segment_tree_min_buildTree_benchmark.cpp  segment_tree_min_getMin_benchmark.cpp  segment_tree_min_getMin_wholeSegment_benchmark.cpp  segment_tree_min_update_benchmark.cpp  segment_tree_sum_buildTree_benchmark.cpp  segment_tree_sum_getSum_average_benchmark.cpp  segment_tree_sum_getSum_benchmark.cpp  segment_tree_sum_getSum_wholeSegment_benchmark.cpp  segment_tree_sum_update_benchmark.cpp
benchmark/benchmark-visualization/: benchmarkGraphs.json  create_benchmark_graphs.py
benchmark/benchmark-visualization/benchmark-results/: demo_benchmark.csv  linear_getMin_benchmark.csv  linear_getSum_benchmark.csv  linear_get_sum_benchmark.csv  segment_tree_min_buildTree_benchmark.csv  segment_tree_min_getMin_average_benchmark.csv  segment_tree_min_getMin_wholeSegment_benchmark.csv  segment_tree_min_update_benchmark.csv  segment_tree_sum_buildTree_benchmark.csv  segment_tree_sum_getSum_average_benchmark.csv  segment_tree_sum_getSum_benchmark.csv  segment_tree_sum_getSum_wholeSegment_benchmark.csv  segment_tree_sum_update_benchmark.csv
dataset/: datasets.json  datasetsConfig.json  generate_csv_dataset.py  generate_datasets.py
include/: segment_tree.hpp  segment_tree_count.hpp  segment_tree_min.hpp  segment_tree_sum.hpp
include/private/: node.hpp
src/: segment_tree.cpp  segment_tree_count.cpp  segment_tree_min.cpp  segment_tree_sum.cpp
